Add Swagger documentation for follow and unfollow api
